--- a/package.json
+++ b/package.json
@@ -25,8 +25,17 @@
     "file-loader": "0.9.0",
     "fs-walk": "0.0.1",
     "gulp": "3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-changed": "^3.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-if-else": "^1.0.3",
+    "gulp-less": "^3.3.2",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-template": "4.0.0",
+    "gulp-uglify": "^3.0.0",
     "html-webpack-plugin": "2.28.0",
     "http-server": "0.9.0",
     "jasmine": "2.4.1",
@@ -39,6 +48,8 @@
     "karma-webpack": "1.7.0",
     "less": "2.7.1",
     "less-loader": "2.2.3",
+    "less-plugin-clean-css": "^1.5.1",
+    "merge-stream": "^1.0.1",
     "ng-annotate-loader": "0.1.0",
     "node-libs-browser": "1.0.0",
     "node-sass": "4.4.0",
