--- a/package.json
+++ b/package.json
@@ -2,17 +2,9 @@
   "name": "resourceManagement",
   "version": "0.0.1",
   "description": "This is an application to do the resource management for Infosys Limited",
-  "main": "index.js",
+  "main": "app.js",
   "dependencies": {
-    "angular": "1.6.4",
-    "angular-animate": "1.5.7",
-    "angular-mocks": "1.5.7",
-    "angular-ui-router": "0.3.1",
-    "bootstrap-css-only": "3.3.6",
-    "lodash": "4.13.1",
-    "normalize.css": "4.1.1",
-    "http-server": "^0.9.0",
-    "angular-1.5-cli": "^1.6.0"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "angular-mocks": "1.5.7",
@@ -22,6 +14,7 @@
     "browser-sync": "2.13.0",
     "browser-sync-webpack-plugin": "1.1.4",
     "css-loader": "0.23.1",
+    "del": "^3.0.0",
     "file-loader": "0.9.0",
     "fs-walk": "0.0.1",
     "gulp": "3.9.1",
@@ -40,6 +33,7 @@
     "http-server": "0.9.0",
     "jasmine": "2.4.1",
     "jasmine-core": "2.4.1",
+    "jspm": "^0.16.53",
     "karma": "1.1.0",
     "karma-jasmine": "1.0.2",
     "karma-phantomjs-launcher": "1.0.1",
@@ -55,6 +49,7 @@
     "node-sass": "4.4.0",
     "phantomjs-prebuilt": "2.1.7",
     "raw-loader": "0.5.1",
+    "require-dir": "^0.3.2",
     "run-sequence": "1.2.1",
     "sass-loader": "4.1.1",
     "style-loader": "0.13.1",
@@ -62,7 +57,9 @@
     "url-loader": "0.5.7",
     "yargs": "4.7.1"
   },
-  "scripts": {},
+  "scripts": {
+    "start": "gulp watch serve"
+  },
   "keywords": [
     "angular",
     "es6"
@@ -72,5 +69,20 @@
     "url": "https://github.com/shaswatamukherjee/resourceManagement.git"
   },
   "author": "Shaswata Mukherjee",
-  "license": "Infosys Limited"
+  "license": "Infosys Limited",
+  "jspm": {
+    "configFile": "systemjs.config.js",
+    "dependencies": {
+      "angular": "github:angular/bower-angular@^1.5.3"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
+  },
+  "scripts": {
+    "postinstall": "jspm install",
+    "start": "gulp serve"
+  }
 }
