--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "angular": "^1.6.4",
     "angular-mocks": "1.5.7",
+    "angular-ui-router": "^1.0.3",
     "babel-core": "6.10.4",
     "babel-loader": "6.2.4",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "6.9.0",
+    "bootstrap-css-only": "^4.0.0",
     "browser-sync": "2.13.0",
     "browser-sync-webpack-plugin": "1.1.4",
+    "core-js": "^2.5.3",
     "css-loader": "0.23.1",
     "del": "^3.0.0",
     "file-loader": "0.9.0",
@@ -23,6 +28,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-if-else": "^1.0.3",
     "gulp-less": "^3.3.2",
+    "gulp-ng-annotate": "^2.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "^3.1.0",
@@ -54,11 +60,13 @@
     "sass-loader": "4.1.1",
     "style-loader": "0.13.1",
     "systemjs": "^0.20.19",
+    "systemjs-builder": "^0.16.12",
+    "systemjs-plugin-babel": "0.0.25",
     "url-loader": "0.5.7",
     "yargs": "4.7.1"
   },
   "scripts": {
-    "start": "gulp watch serve"
+    "start": "gulp serve"
   },
   "keywords": [
     "angular",
@@ -73,19 +81,15 @@
   "jspm": {
     "configFile": "systemjs.config.js",
     "dependencies": {
-      "angular": "github:angular/bower-angular@^1.5.3"
+      "angular": "github:angular/bower-angular@^1.6.8",
+      "angular-ui-router": "github:angular-ui/angular-ui-router-bower@^1.0.13"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
+      "plugin-babel": "npm:babel-core@^5.8.24",
+      "plugin-babel-runtime": "npm:babel-runtime@^5.8.24"
     }
   },
   "engines": {
     "node": "6.11.4"
-  },
-  "scripts": {
-    "postinstall": "jspm bundle-sfx app/main && jspm install",
-    "start": "gulp serve"
   }
 }
