--- a/package.json
+++ b/package.json
@@ -5,8 +5,23 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.16.2",
-    "gulp": "^3.9.1",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "gulp": "3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-changed": "^3.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-if-else": "^1.0.3",
+    "gulp-less": "^3.3.2",
+    "gulp-ng-annotate": "^2.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-template": "4.0.0",
+    "gulp-uglify": "^3.0.0",
+    "require-dir": "^0.3.2",
+    "run-sequence": "1.2.1"
+
   },
   "devDependencies": {
     "angular": "^1.6.4",
@@ -24,19 +39,6 @@
     "del": "^3.0.0",
     "file-loader": "0.9.0",
     "fs-walk": "0.0.1",
-    "gulp": "3.9.1",
-    "gulp-babel": "^7.0.0",
-    "gulp-changed": "^3.1.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-if-else": "^1.0.3",
-    "gulp-less": "^3.3.2",
-    "gulp-ng-annotate": "^2.1.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-template": "4.0.0",
-    "gulp-uglify": "^3.0.0",
     "html-webpack-plugin": "2.28.0",
     "http-server": "0.9.0",
     "jasmine": "2.4.1",
@@ -57,8 +59,6 @@
     "node-sass": "4.4.0",
     "phantomjs-prebuilt": "2.1.7",
     "raw-loader": "0.5.1",
-    "require-dir": "^0.3.2",
-    "run-sequence": "1.2.1",
     "sass-loader": "4.1.1",
     "style-loader": "0.13.1",
     "systemjs": "^0.20.19",
