--- a/package.json
+++ b/package.json
@@ -5,64 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.16.2",
-    "lodash": "^4.17.4",
-    "gulp": "3.9.1",
-    "gulp-babel": "^7.0.0",
-    "gulp-changed": "^3.1.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-if-else": "^1.0.3",
-    "gulp-less": "^3.3.2",
-    "gulp-ng-annotate": "^2.1.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-template": "4.0.0",
-    "gulp-uglify": "^3.0.0",
-    "require-dir": "^0.3.2",
-    "run-sequence": "1.2.1",
-    "angular": "^1.6.4",
-    "angular-mocks": "1.5.7",
-    "angular-ui-router": "^1.0.3",
-    "babel-core": "6.10.4",
-    "babel-loader": "6.2.4",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "6.9.0",
-    "bootstrap-css-only": "^4.0.0",
-    "browser-sync": "2.13.0",
-    "browser-sync-webpack-plugin": "1.1.4",
-    "core-js": "^2.5.3",
-    "css-loader": "0.23.1",
-    "del": "^3.0.0",
-    "file-loader": "0.9.0",
-    "fs-walk": "0.0.1",
-    "html-webpack-plugin": "2.28.0",
-    "http-server": "0.9.0",
-    "jasmine": "2.4.1",
-    "jasmine-core": "2.4.1",
-    "jspm": "^0.16.53",
-    "karma": "1.1.0",
-    "karma-jasmine": "1.0.2",
-    "karma-phantomjs-launcher": "1.0.1",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "1.7.0",
-    "less": "2.7.1",
-    "less-loader": "2.2.3",
-    "less-plugin-clean-css": "^1.5.1",
-    "merge-stream": "^1.0.1",
-    "ng-annotate-loader": "0.1.0",
-    "node-libs-browser": "1.0.0",
-    "node-sass": "4.4.0",
-    "phantomjs-prebuilt": "2.1.7",
-    "raw-loader": "0.5.1",
-    "sass-loader": "4.1.1",
-    "style-loader": "0.13.1",
-    "systemjs": "^0.20.19",
-    "systemjs-builder": "^0.16.12",
-    "systemjs-plugin-babel": "0.0.25",
-    "url-loader": "0.5.7",
-    "yargs": "4.7.1"
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
     "angular": "^1.6.4",
@@ -80,6 +23,21 @@
     "del": "^3.0.0",
     "file-loader": "0.9.0",
     "fs-walk": "0.0.1",
+    "gulp": "3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-changed": "^3.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-if-else": "^1.0.3",
+    "gulp-less": "^3.3.2",
+    "gulp-ng-annotate": "^2.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-template": "4.0.0",
+    "gulp-uglify": "^3.0.0",
+    "require-dir": "^0.3.2",
+    "run-sequence": "1.2.1",
     "html-webpack-plugin": "2.28.0",
     "http-server": "0.9.0",
     "jasmine": "2.4.1",
@@ -109,7 +67,8 @@
     "yargs": "4.7.1"
   },
   "scripts": {
-    "postinstall": "gulp build",
+    "postinstall": "jspm install && gulp build",
+    "start-local": "gulp serve",
     "start": "node server.js"
   },
   "keywords": [
